HDPI-1429: Split creation event into two and save unsubmitted answers