@@ -3,30 +3,37 @@ package uk.gov.hmcts.reform.pcs.ccd;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.modelmapper.ModelMapper;
 import uk.gov.hmcts.ccd.sdk.type.AddressUK;
 import uk.gov.hmcts.ccd.sdk.type.ListValue;
+import uk.gov.hmcts.ccd.sdk.type.YesOrNo;
 import uk.gov.hmcts.reform.pcs.ccd.domain.PCSCase;
 import uk.gov.hmcts.reform.pcs.ccd.domain.Party;
 import uk.gov.hmcts.reform.pcs.ccd.domain.PaymentStatus;
+import uk.gov.hmcts.reform.pcs.ccd.domain.VerticalYesNo;
 import uk.gov.hmcts.reform.pcs.ccd.entity.AddressEntity;
 import uk.gov.hmcts.reform.pcs.ccd.entity.PartyEntity;
 import uk.gov.hmcts.reform.pcs.ccd.entity.PcsCaseEntity;
 import uk.gov.hmcts.reform.pcs.ccd.renderer.ClaimPaymentTabRenderer;
-import uk.gov.hmcts.reform.pcs.ccd.repository.PartyRepository;
 import uk.gov.hmcts.reform.pcs.ccd.repository.PcsCaseRepository;
+import uk.gov.hmcts.reform.pcs.ccd.service.UnsubmittedCaseDataService;
 import uk.gov.hmcts.reform.pcs.exception.CaseNotFoundException;
+import uk.gov.hmcts.reform.pcs.postcodecourt.model.LegislativeCountry;
 import uk.gov.hmcts.reform.pcs.security.SecurityContextService;
-import uk.gov.hmcts.reform.pcs.ccd.domain.VerticalYesNo;
 
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
+import java.util.stream.Stream;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.catchThrowable;
+import static org.junit.jupiter.params.provider.Arguments.arguments;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.Mockito.mock;
@@ -48,14 +55,18 @@ class CCDCaseRepositoryTest {
     @Mock
     private ClaimPaymentTabRenderer claimPaymentTabRenderer;
     @Mock
-    private PartyRepository partyRepository;
+    private UnsubmittedCaseDataService unsubmittedCaseDataService;
+    @Mock
+    private PcsCaseEntity pcsCaseEntity;
 
     private CCDCaseRepository underTest;
 
     @BeforeEach
     void setUp() {
+        when(pcsCaseRepository.findByCaseReference(CASE_REFERENCE)).thenReturn(Optional.of(pcsCaseEntity));
+
         underTest = new CCDCaseRepository(pcsCaseRepository, securityContextService,
-                modelMapper, claimPaymentTabRenderer, partyRepository);
+                modelMapper, claimPaymentTabRenderer, unsubmittedCaseDataService);
     }
 
     @Test
@@ -72,13 +83,31 @@ class CCDCaseRepositoryTest {
                 .hasMessage("No case found with reference %s", CASE_REFERENCE);
     }
 
+    @ParameterizedTest
+    @MethodSource("unsubmittedDataFlagScenarios")
+    void shouldSetFlagForUnsubmittedData(boolean hasUnsubmittedData, YesOrNo expectedCaseDataValue) {
+        // Given
+        when(unsubmittedCaseDataService.hasUnsubmittedCaseData(CASE_REFERENCE)).thenReturn(hasUnsubmittedData);
+
+        // When
+        PCSCase pcsCase = underTest.getCase(CASE_REFERENCE);
+
+        // Then
+        assertThat(pcsCase.getHasUnsubmittedCaseData()).isEqualTo(expectedCaseDataValue);
+    }
+
+    private static Stream<Arguments> unsubmittedDataFlagScenarios() {
+        return Stream.of(
+            // unsubmitted case data available, expected case data value
+            arguments(false, YesOrNo.NO),
+            arguments(true, YesOrNo.YES)
+        );
+    }
+
     @Test
     void shouldReturnCaseWithNoPropertyAddress() {
         // Given
-        PcsCaseEntity pcsCaseEntity = mock(PcsCaseEntity.class);
         when(pcsCaseEntity.getPaymentStatus()).thenReturn(PaymentStatus.UNPAID);
-
-        when(pcsCaseRepository.findByCaseReference(CASE_REFERENCE)).thenReturn(Optional.of(pcsCaseEntity));
 
         // When
         PCSCase pcsCase = underTest.getCase(CASE_REFERENCE);
@@ -90,10 +119,7 @@ class CCDCaseRepositoryTest {
     @Test
     void shouldRenderClaimPaymentMarkdownWhenPaymentStatusIsNotNull() {
         // Given
-        PcsCaseEntity pcsCaseEntity = mock(PcsCaseEntity.class);
         when(pcsCaseEntity.getPaymentStatus()).thenReturn(PaymentStatus.UNPAID);
-
-        when(pcsCaseRepository.findByCaseReference(CASE_REFERENCE)).thenReturn(Optional.of(pcsCaseEntity));
 
         String expectedPaymentMarkdown = "payment markdown";
         when(claimPaymentTabRenderer.render(CASE_REFERENCE, PaymentStatus.UNPAID)).thenReturn(expectedPaymentMarkdown);
@@ -108,10 +134,7 @@ class CCDCaseRepositoryTest {
     @Test
     void shouldNotRenderClaimPaymentMarkdownWhenNoPaymentStatus() {
         // Given
-        PcsCaseEntity pcsCaseEntity = mock(PcsCaseEntity.class);
         when(pcsCaseEntity.getPaymentStatus()).thenReturn(null); // Stated for clarity
-
-        when(pcsCaseRepository.findByCaseReference(CASE_REFERENCE)).thenReturn(Optional.of(pcsCaseEntity));
 
         // When
         PCSCase pcsCase = underTest.getCase(CASE_REFERENCE);
@@ -124,13 +147,10 @@ class CCDCaseRepositoryTest {
     @Test
     void shouldMapPropertyAddress() {
         // Given
-        PcsCaseEntity pcsCaseEntity = mock(PcsCaseEntity.class);
         AddressEntity addressEntity = mock(AddressEntity.class);
         when(pcsCaseEntity.getPropertyAddress()).thenReturn(addressEntity);
         when(pcsCaseEntity.getPaymentStatus()).thenReturn(PaymentStatus.UNPAID);
         AddressUK addressUK = stubAddressEntityModelMapper(addressEntity);
-
-        when(pcsCaseRepository.findByCaseReference(CASE_REFERENCE)).thenReturn(Optional.of(pcsCaseEntity));
 
         // When
         PCSCase pcsCase = underTest.getCase(CASE_REFERENCE);
@@ -142,7 +162,6 @@ class CCDCaseRepositoryTest {
     @Test
     void shouldMapPartyEntity() {
         // Given
-        PcsCaseEntity pcsCaseEntity = mock(PcsCaseEntity.class);
         PartyEntity partyEntity = mock(PartyEntity.class);
         when(pcsCaseEntity.getParties()).thenReturn(Set.of(partyEntity));
 
@@ -150,7 +169,6 @@ class CCDCaseRepositoryTest {
 
         when(modelMapper.map(partyEntity, Party.class)).thenReturn(party);
         when(pcsCaseEntity.getPaymentStatus()).thenReturn(PaymentStatus.UNPAID);
-        when(pcsCaseRepository.findByCaseReference(CASE_REFERENCE)).thenReturn(Optional.of(pcsCaseEntity));
 
         // When
         PCSCase pcsCase = underTest.getCase(CASE_REFERENCE);
@@ -158,48 +176,43 @@ class CCDCaseRepositoryTest {
         // Then
         List<ListValue<Party>> mappedParties = pcsCase.getParties();
         assertThat(mappedParties).hasSize(1);
-        assertThat(mappedParties.get(0).getValue()).isSameAs(party);
+        assertThat(mappedParties.getFirst().getValue()).isSameAs(party);
     }
 
-    @Test
-    void shouldMapPreActionProtocolCompletedWhenYes() {
+    @ParameterizedTest
+    @MethodSource("preActionProtocolScenarios")
+    void shouldMapPreActionProtocolCompleted(Boolean databaseFlag,
+                                             VerticalYesNo expectedCaseDataValue) {
         // Given
-        PcsCaseEntity pcsCaseEntity = mock(PcsCaseEntity.class);
-        when(pcsCaseEntity.getPreActionProtocolCompleted()).thenReturn(true);
-        when(pcsCaseRepository.findByCaseReference(CASE_REFERENCE)).thenReturn(Optional.of(pcsCaseEntity));
+        when(pcsCaseEntity.getPreActionProtocolCompleted()).thenReturn(databaseFlag);
 
         // When
         PCSCase pcsCase = underTest.getCase(CASE_REFERENCE);
 
         // Then
-        assertThat(pcsCase.getPreActionProtocolCompleted()).isEqualTo(VerticalYesNo.YES);
+        assertThat(pcsCase.getPreActionProtocolCompleted()).isEqualTo(expectedCaseDataValue);
+    }
+
+    private static Stream<Arguments> preActionProtocolScenarios() {
+        return Stream.of(
+            // DB value, expected case data value
+            arguments(false, VerticalYesNo.NO),
+            arguments(true, VerticalYesNo.YES),
+            arguments(null, null)
+        );
     }
 
     @Test
-    void shouldMapPreActionProtocolCompletedWhenNo() {
+    void shouldMapLegislativeCountry() {
         // Given
-        PcsCaseEntity pcsCaseEntity = mock(PcsCaseEntity.class);
-        when(pcsCaseEntity.getPreActionProtocolCompleted()).thenReturn(false);
-        when(pcsCaseRepository.findByCaseReference(CASE_REFERENCE)).thenReturn(Optional.of(pcsCaseEntity));
-        // When
-        PCSCase pcsCase = underTest.getCase(CASE_REFERENCE);
-
-        // Then
-        assertThat(pcsCase.getPreActionProtocolCompleted()).isEqualTo(VerticalYesNo.NO);
-    }
-
-    @Test
-    void shouldMapPreActionProtocolCompletedAsNullWhenNull() {
-        // Given
-        PcsCaseEntity pcsCaseEntity = mock(PcsCaseEntity.class);
-        when(pcsCaseEntity.getPreActionProtocolCompleted()).thenReturn(null);
-        when(pcsCaseRepository.findByCaseReference(CASE_REFERENCE)).thenReturn(Optional.of(pcsCaseEntity));
+        LegislativeCountry expectedLegislativeCountry = LegislativeCountry.SCOTLAND;
+        when(pcsCaseEntity.getLegislativeCountry()).thenReturn(expectedLegislativeCountry);
 
         // When
         PCSCase pcsCase = underTest.getCase(CASE_REFERENCE);
 
         // Then
-        assertThat(pcsCase.getPreActionProtocolCompleted()).isNull();
+        assertThat(pcsCase.getLegislativeCountry()).isEqualTo(expectedLegislativeCountry);
     }
 
     private AddressUK stubAddressEntityModelMapper(AddressEntity addressEntity) {
